waffle chart preview crop

--- a/_posts/2020-11-03-tidytuesday-2020-week-45/tidytuesday-2020-week-45.Rmd
+++ b/_posts/2020-11-03-tidytuesday-2020-week-45/tidytuesday-2020-week-45.Rmd
@@ -35,7 +35,7 @@ knitr::opts_chunk$set(
 
 
 ```{r, echo = FALSE, layout = 'l-body-outset'}
-knitr::include_graphics('preview.png', error = FALSE)
+knitr::include_graphics('preview_full.png', error = FALSE)
 ```
 
 
