--- a/resources.Rmd
+++ b/resources.Rmd
@@ -15,7 +15,7 @@ p {
 
 ## Data Visualization
 
-- {ggplot2} style guide and showcase ({xaringan} + {flipbookr} presentation)
+- {ggplot2} style guide and showcase - [pdf of most recent ver.](static/slides/ggplot2_flipbook_CHOE.pdf)
 
     - Penn Phonetics Lab [[slides](https://yjunechoe.netlify.app/flipbooks/p_lab_ggplot2_2020/p_lab_ggplot2.html), [code](https://raw.githubusercontent.com/yjunechoe/yjunechoe.github.io/master/flipbooks/P_lab_ggplot2_2020/P_lab_ggplot2.Rmd)] (10/23/20)
 
