--- a/index.Rmd
+++ b/index.Rmd
@@ -5,6 +5,11 @@ site: distill::distill_website
 ---
 
 ```{css}
+d-article {
+  padding-top: 5px;
+  border-top: 0px;
+}
+
 d-title h1 {
   text-align: center;
   font-family: trispace;
@@ -28,7 +33,6 @@ p {
   margin-bottom: 5px;
   padding-left: 10px;
 }
-
 ```
 
 <div style="border-bottom:3px solid black; margin-bottom:20px">
@@ -60,8 +64,8 @@ I received my B.A. in Linguistics from Northwestern University, where I worked w
 
 Beyond linguistics research, I have interests in data visualization, science communication, and the R programming language. I'm especially passionate about explanatory data viz in academic research and strongly believe that _style_ is just as important as _content_. I [blog](https://yjunechoe.github.io/blog.html) about these topics as a hobby, and have been developing a [personal R package](https://github.com/yjunechoe/junebug) that puts my opinionated views into practice.
 
-I'm also a [MindCORE](https://mindcore.sas.upenn.edu/) student affiliate and work as a data science tutor for researchers at Penn. You can [schedule an appointment](https://rb.gy/gfhd2f) with me if you have questions related to R and/or data visualization.
+I am also a [Penn MindCORE](https://mindcore.sas.upenn.edu/) student affiliate and work as a data science tutor for researchers at Penn. You can [schedule an appointment](https://rb.gy/gfhd2f) with me if you have questions related to R and/or data visualization.
 
 <p></p>
 
-<div style='text-align: center'><span class="sc" style="font-size:1.2em">contact me:</span> yj{<i>last_name</i>}\@sas.upenn.edu</div>
+<div style='text-align: center'><span class="sc" style="font-size:1.2em">contact me: </span> yj<span>choe</span>\@sas.upenn.edu</div>
