--- a/research.Rmd
+++ b/research.Rmd
@@ -20,6 +20,9 @@ d-article ul li p {
 * McWeeny, S., Choi, S. J., LaTourette, A., **Choe, J.**, Roberts, M. Y., & Norton, E. S. (under review).
 Rapid automatized naming as a kindergarten predictor of future reading: A meta-analysis.
 
+### In Prep
+
+* **June Choe**, Jennifer Cole, and Masaya Yoshida. (in prep). Prosodic focus strengthens semantic persistence.
 
 ## Conference Presentations
 
