--- a/_posts/2021-01-17-random-sampling-a-table-animation/random-sampling-a-table-animation.Rmd
+++ b/_posts/2021-01-17-random-sampling-a-table-animation/random-sampling-a-table-animation.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Random Sampling: A table animation"
 description: |
-  Plus a convenient way of rendering LaTex expressions as images
+  Plus a convenient way of rendering LaTeX expressions as images
 categories:
   - data visualization
   - data wrangling
@@ -109,13 +109,13 @@ samples_data_table <- samples_data_spread %>%
 samples_data_table
 ```
 
-### An aside on LaTex equations
+### An aside on LaTeX equations
 
 As an aside, let's say we also want to annotate this table with the true distribution where this sample came from. As specified in our call to `MASS::mvrnorm()` used to make `samples_data`, the distribution is one where both variables have a mean of 0 and a standard deviation of 1, plus a correlation of 0.7:
 
 $$\begin{bmatrix} X \\ Y \end{bmatrix}\ \sim\ N(\begin{bmatrix} 0 \\ 0 \end{bmatrix},\begin{bmatrix}1 & 0.7 \\ 0.7 & 1 \end{bmatrix})$$
 
-Where the LaTex code for the above formula is:
+Where the LaTeX code for the above formula is:
 
 ```{r, echo = FALSE}
 cat(r"(\begin{bmatrix} X \\ Y \end{bmatrix}\ \sim\
@@ -124,11 +124,11 @@ N(\begin{bmatrix} 0 \\ 0 \end{bmatrix},
 )")
 ```
 
-Many different solutions already exist to LaTex math annotations. The most common is probably Non-Standard Evaluation (NSE) methods using `parse()`, `expression()`, `bquote()` etc. There are bulkier solutions like the {latex2exp} package that plots **plotmath** expressions, though it hasn't been updated since 2015 and I personally had difficulty getting it to work.
+Many different solutions already exist to LaTeX math annotations. The most common is probably Non-Standard Evaluation (NSE) methods using `parse()`, `expression()`, `bquote()` etc. There are bulkier solutions like the {latex2exp} package that plots **plotmath** expressions, though it hasn't been updated since 2015 and I personally had difficulty getting it to work.
 
-One solution I've never heard of/considered before is querying a web LaTex editor that has an API. The [Online LaTex Equation Editor](https://www.codecogs.com/latex/eqneditor.php?lang=en-en) by CodeCogs is the perfect example of this. A simple link that contains the LaTex code in a URL-compatible encoding renders the resulting expression as an image!
+One solution I've never heard of/considered before is querying a web LaTeX editor that has an API. The [Online LaTeX Equation Editor](https://www.codecogs.com/latex/eqneditor.php?lang=en-en) by CodeCogs is the perfect example of this. A simple link that contains the LaTeX code in a URL-compatible encoding renders the resulting expression as an image!
 
-I wrote a function `latex_query` (not thoroughly tested) in my [personal package](https://github.com/yjunechoe/junebug) that takes LaTex code and generates a CodeCogs URL containing the rendered expression^[Details about the API - [https://www.codecogs.com/latex/editor-api.php](https://www.codecogs.com/latex/editor-api.php)] 
+I wrote a function `latex_query` (not thoroughly tested) in my [personal package](https://github.com/yjunechoe/junebug) that takes LaTeX code and generates a CodeCogs URL containing the rendered expression^[Details about the API - [https://www.codecogs.com/latex/editor-api.php](https://www.codecogs.com/latex/editor-api.php)] 
 
 ```{r, out.width="350px", fig.align="center"}
 # NOTE the string literal syntax using r"(...)" is only available in R 4.0.0 and up
@@ -142,9 +142,9 @@ latex_url <- junebug::latex_query(
 knitr::include_graphics(latex_url)
 ```
 
-The variable `latex_url` is this [really long URL](https://latex.codecogs.com/png.latex?%5Cdpi%7B150%7D%20%5Clarge%20%5Cbegin%7Bbmatrix%7D%20X%20%5C%5C%20Y%20%5Cend%7Bbmatrix%7D%5C%20%5Csim%5C%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20N%28%5Cbegin%7Bbmatrix%7D%200%20%5C%5C%200%20%5Cend%7Bbmatrix%7D%2C%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%5Cbegin%7Bbmatrix%7D1%20%26%200.7%20%5C%5C%200.7%20%26%201%20%5Cend%7Bbmatrix%7D%29) which, as we see above, points to a rendered image of the LaTex expression we fed it!
+The variable `latex_url` is this [really long URL](https://latex.codecogs.com/png.latex?%5Cdpi%7B150%7D%20%5Clarge%20%5Cbegin%7Bbmatrix%7D%20X%20%5C%5C%20Y%20%5Cend%7Bbmatrix%7D%5C%20%5Csim%5C%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20N%28%5Cbegin%7Bbmatrix%7D%200%20%5C%5C%200%20%5Cend%7Bbmatrix%7D%2C%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%5Cbegin%7Bbmatrix%7D1%20%26%200.7%20%5C%5C%200.7%20%26%201%20%5Cend%7Bbmatrix%7D%29) which, as we see above, points to a rendered image of the LaTeX expression we fed it!
 
-Annotating our table, then, is pretty straightforward. We save it as an image, read in the LaTex equation as an image, then combine!
+Annotating our table, then, is pretty straightforward. We save it as an image, read in the LaTeX equation as an image, then combine!
 
 ```{r, eval = FALSE}
 save_kable(samples_data_table, "img/samples_data_table.png")
@@ -228,7 +228,7 @@ purrr::iwalk(samples_tables, ~ save_kable(.x, file = glue::glue("tbl_imgs/tbl{.y
 table_imgs <- image_read(paste0("tbl_imgs/tbl", 1:10, ".png"))
 ```
 
-Now we can add our LaTex expression from the previous section as an annotation to these table images using `image_composite()`:
+Now we can add our LaTeX expression from the previous section as an annotation to these table images using `image_composite()`:
 
 ```{r, eval = FALSE}
 table_imgs_annotated <- table_imgs %>% 
