--- a/research.Rmd
+++ b/research.Rmd
@@ -30,7 +30,7 @@ Rapid automatized naming as a kindergarten predictor of future reading: A meta-a
 
 * **June Choe**, Jennifer Cole, and Masaya Yoshida. *Prosodic Focus Strengthens Semantic Persistence*. [Poster](static/poster/AMLAP2020.pdf) presented at The 26th Architectures and Mechanisms for Language Processing (AMLaP), 3-5 September 2020. Potsdam, Germany. [Abstract](static/abstract/AMLAP_2020_Abstract.pdf) [Video](https://osf.io/fjkp9/) [Slides](static/slides/AMLAP_2020_Slides.pdf)
 
-* **June Choe**. *Computer-assisted snowball search for meta-analysis research*. [Poster](static/poster/Snowballer_June_Choe.pdf) presented at The 2020 Undergraduate Research & Arts Exposition. 27-28 May 2020. Northwestern University, Evanston, IL.  **2nd Place Award**. [Abstract](static/abstract/Expo_2020_Abstract.pdf)
+* **June Choe**. *Computer-assisted snowball search for meta-analysis research*. [Poster](static/poster/Snowballer_June_Choe.pdf) presented at The 2020 Undergraduate Research & Arts Exposition. 27-28 May 2020. Northwestern University, Evanston, IL.  **2nd Place Poster Award**. [Abstract](static/abstract/Expo_2020_Abstract.pdf)
 
 ### 2019
 
