--- a/news.Rmd
+++ b/news.Rmd
@@ -29,6 +29,10 @@ li::marker {
 
 ## 2021
 
+### May
+
+- [SnowGlobe](https://snowglobe.soc.northwestern.edu/), a project started in my undergrad, was featured in an [article](https://sites.northwestern.edu/northwesternlibrary/2021/05/11/student-developed-app-expedites-time-consuming-research-task/) by the NU Library. We also had a [workshop for SnowGlobe](https://www.eventbrite.com/e/an-introduction-to-snowglobe-a-tool-for-systematic-reviews-tickets-149045397797#) which drew participants from over a hundred universities!
+
 ### January
 
 - I joined [Dr. Nayoun Kim](https://nayounkimlinguist.com/) for a [workshop on experimental syntax](https://skb.skku.edu/bk21english/board/notice.do?mode=view&articleNo=110726&article.offset=0&articleLimit=10) held at Sungkyunkwan University (Korea). I helped design [materials](https://github.com/yjunechoe/IBEX-Workshop-Materials) for a session on scripting online experiments with IBEX, including [interactive slides](https://ibex-workshop-slides.netlify.app/) made with R!
