--- a/_posts/2020-10-13-designing-guiding-aesthetics/designing-guiding-aesthetics.Rmd
+++ b/_posts/2020-10-13-designing-guiding-aesthetics/designing-guiding-aesthetics.Rmd
@@ -20,7 +20,7 @@ output:
     self_contained: false
 ---
 
-```{r opts}
+```{r opts, echo = FALSE}
 knitr::opts_chunk$set(
   comment = " ",
   echo = TRUE,
