--- a/_posts/2020-11-08-plot-makeover-2/plot-makeover-2.Rmd
+++ b/_posts/2020-11-08-plot-makeover-2/plot-makeover-2.Rmd
@@ -22,7 +22,7 @@ editor_options:
 bibliography: biblio.bib
 ---
 
-```{r opts}
+```{r opts, echo = FALSE}
 knitr::opts_chunk$set(
   comment = " ",
   echo = TRUE,
